force-app/main/default/objects/OrgWideEmail__c/OrgWideEmail__c.object-meta.xml
<CustomObject>
    <description>This is a read only object that is synced with the org wide send email addresses via Apex so the email sending address can be synced for selection during setup for a Vendor Program.</description>
    <label>Org Wide Email</label>
    <nameField>
        <label>Org Wide Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Org Wide Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>