force-app/main/default/objects/OrgWideEmail__c/fields/MasterLabel__c.field-meta.xml
<CustomField>
    <fullName>MasterLabel__c</fullName>
    <label>Master Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>